# tips

./: .gitignore  .marprc.yml  .prettierignore  .prettierrc  README.md  astro.config.mjs  mise.toml  package-lock.json  package.json  pyproject.toml  tsconfig.json  tsconfig.scripts.json
.github/workflows/: deploy_pages.yml  zenn_to_qiita.yml
.husky/: pre-commit
scripts/: z2q.ts
src/content/docs/: index.md
src/content/docs/english/: adverb.md  appreciate.md  conjunction.md  just_remember.md  one_that.md
src/content/docs/favorites/: drama.md  word_of_wisdom.md
src/content/docs/latex/: dash.md  online_equation.md
src/content/docs/nlp/: install_tools.md
src/content/docs/physics/definition/: solid_angle.md
src/content/docs/physics/tools/: root.md
src/content/docs/python/: lmfit.md
src/content/docs/statistics/: descriptive_statistics.md  ftest.md  outlie.md  run_test.md  significance.md  statistical_hypothesis.md
src/content/docs/statistics/bayesian/: bayesian_estimation.md  bayesian_statistics.md
src/content/docs/testing/: automated_testing.md  playwright.md
src/content/docs/webfrontend/html/: inline_block.md
src/content/slides/src/: index.md
src/content/slides/src/sample/: index.md
src/content/slides/src/self-introduction/: index.md
src/content/slides/themes/: global.css  utility.css
src/libs/z2q/: config.ts  convert.test.ts  convert.ts  frontMatter.test.ts  frontMatter.ts  index.ts  io.ts
src/styles/: custom.css
