[tool.poetry]
name = "tips"
version = "0.1.0"
description = "my yummy tips"
authors = ["aYukiYoshida <yuki.yoshida@access-company.com>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.5.2"
mkdocs-material = "^8.3.8"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.executor]
type = "poetry"

[tool.poe.tasks."build:docs"]
cmd = "mkdocs build"
help = "Build documentation with MkDocs"

[tool.poe.tasks."preview:docs"]
cmd = "mkdocs serve"
help = "Preview documentation with MkDocs"
